fixed h2 on mobile to better fit

--- a/index.css
+++ b/index.css
@@ -272,6 +272,7 @@ footer {
     
     header h2 {
         text-align: center;
+        font-size: 3rem;
     }
 
     .flex-nav ul {
